# zed

./: Cargo.toml
crates/agent_ui/src/: agent_ui.rs
crates/cursor/: Cargo.toml  build.rs
crates/cursor/src/: cursor.rs  cursor_client.rs  cursor_completion_provider.rs  unite.proto
crates/edit_prediction_button/: Cargo.toml
crates/edit_prediction_button/src/: edit_prediction_button.rs
crates/settings/src/settings_content/: language.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
crates/zed/src/zed/: edit_prediction_registry.rs
