[package]
name = "cursor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/cursor.rs"
doctest = false

[dependencies]
anyhow.workspace = true
clock.workspace = true
client.workspace = true
collections.workspace = true
edit_prediction.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
language.workspace = true
log.workspace = true
project.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
text.workspace = true
tokio.workspace = true
ui.workspace = true
unicode-segmentation.workspace = true
util.workspace = true
uuid.workspace = true
flate2 = "1.0"
sha2 = "0.10"
chrono = "0.4"

[build-dependencies]
prost-build.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
language = { workspace = true, features = ["test-support"] }
project = { workspace = true, features = ["test-support"] }
settings = { workspace = true, features = ["test-support"] }
